# prompt-debugger

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  claim-reverification.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
adapters/: README.md
adapters/claude-code/: README.md  adapter-manifest.json
benchmarks/: README.md  benchmark-case.schema.json  run.py
benchmarks/perf/: RESULTS.md  harness.py
core/contracts/: README.md
core/knowledge/: README.md  manifest.json
docs/: ARCHITECTURE.md  COMPATIBILITY.md  CONTRACT-INVARIANTS.md  DATAFLOW.md  ETHICS.md  GLOSSARY.md  OVERVIEW.md  PRIVACY.md  ROADMAP.md  THREAT-MODEL.md
docs/adr/: 0001-prompt-ir-not-ast.md  0002-report-json-canonical.md  (+10 more)
evals/: README.md
specs/: M1.md  M2.md
tests/: conftest.py  test_benchmark_corpus.py  test_cli.py  test_composite_validation.py  test_contract_invariants.py  test_contract_versions.py  test_differential_validation.py  test_frontmatter.py  test_knowledge.py  test_knowledge_integrity.py  test_paths.py  test_perf_harness.py  test_privacy_invariants.py  test_redact.py  test_render.py  test_sanitize.py  test_schema_subset.py  test_schema_validator.py  test_store.py  test_tooling.py  test_verify.py
tools/: README.md  _subset.py  check_imports.py  check_links.py  check_plugin_sync.py  check_release_version.py  check_versions.py  sync_plugin.py  validate_schemas.py
(+119 files in other folders)
